cabal-version: 2.2

Name:                cron
Version:             0.7.0
Description:
  Cron data structure and Attoparsec parser. The idea is to embed it in larger
  systems which want to roll their own scheduled tasks in a format that people
  are used to.

  'System.Cron' is where all the interesting datatypes live. You will also find
  'scheduleMatches', which you can use to compare a time against a
  'CronSchedule' to see if an action needs to be performed.  System.Cron.Parser
  is where you will find the parsers `cronSchedule`, `crontabEntry` and
  `cronTab`. To parse individual schedules up to full crontab files.

Synopsis:            Cron datatypes and Attoparsec parser
Category:            Text, Parsing, System
License:             MIT
License-file:        LICENSE
Author:              Michael Xavier <michael@michaelxavier.net>
Copyright:           Copyright: (c) 2012-2014 Michael Xavier
Maintainer:          Michael Xavier <michael@michaelxavier.net>
Build-Type:          Simple
Extra-Source-Files:
  README.md
  changelog

flag pedantic
  default: False
  manual: True

common library
  default-language: Haskell2010
  if flag(pedantic)
    ghc-options: -Werror

library
  import: library

  Exposed-modules:   System.Cron
                   , System.Cron.Internal.Describe.Descriptors
                   , System.Cron.Internal.Describe.Options
                   , System.Cron.Internal.Describe.Time
                   , System.Cron.Internal.Describe.Types
                   , System.Cron.Internal.Describe.Utils
                   , System.Cron.Internal.Check
                   , System.Cron.Internal.Schedule
                   , System.Cron.Describe
                   , System.Cron.Parser
                   , System.Cron.Schedule
                   , System.Cron.Types
  Hs-source-dirs:  src
  build-depends:
    base >= 4.17 && < 4.18
    , attoparsec >= 0.14.4 && < 0.15
    , data-default-class >= 0.1.2 && < 0.2
    , mtl >= 2.3.1 && < 2.4
    , text >= 2.0.1 && < 2.1
    , time >= 1.12.2 && < 1.13

  ghc-options: -Wall


test-suite test
  import: library

  Type:           exitcode-stdio-1.0
  Main-Is:        Main.hs
  Hs-Source-Dirs: test
  other-modules:    SpecHelper
                  , System.Test.Cron
                  , System.Test.Cron.Describe
                  , System.Test.Cron.Parser
                  , System.Test.Cron.Schedule
                  , System.Test.Cron.Internal.Schedule
  Build-Depends:    base
                  , cron
                  , tasty
                  , tasty-hunit
                  , tasty-hedgehog
                  , hedgehog
                  , attoparsec
                  , text
                  , time
                  , transformers-compat
                  , semigroups

  ghc-options: -Wall -O2 -threaded -rtsopts -with-rtsopts=-N


source-repository head
  Type:     git
  Location: https://github.com/michaelxavier/cron
