cabal-version:      2.2
name:               cron
version:            0.7.0
description:
  Cron data structure and Attoparsec parser. The idea is to embed it in larger
  systems which want to roll their own scheduled tasks in a format that people
  are used to.
  'System.Cron' is where all the interesting datatypes live. You will also find
  'scheduleMatches', which you can use to compare a time against a
  'CronSchedule' to see if an action needs to be performed.  System.Cron.Parser
  is where you will find the parsers `cronSchedule`, `crontabEntry` and
  `cronTab`. To parse individual schedules up to full crontab files.

synopsis:           Cron datatypes and Attoparsec parser
category:           Text, Parsing, System
license:            MIT
license-file:       LICENSE
author:             Michael Xavier <michael@michaelxavier.net>
copyright:          Copyright: (c) 2012-2014 Michael Xavier
maintainer:         Michael Xavier <michael@michaelxavier.net>
build-type:         Simple
extra-source-files:
  changelog
  README.md

flag pedantic
  default: False
  manual:  True

common library
  default-language: Haskell2010

  if flag(pedantic)
    ghc-options: -Werror

library
  import:          library
  exposed-modules:
    System.Cron
    System.Cron.Describe
    System.Cron.Internal.Check
    System.Cron.Internal.Describe.Descriptors
    System.Cron.Internal.Describe.Options
    System.Cron.Internal.Describe.Time
    System.Cron.Internal.Describe.Types
    System.Cron.Internal.Describe.Utils
    System.Cron.Internal.Schedule
    System.Cron.Parser
    System.Cron.Schedule
    System.Cron.Types

  hs-source-dirs:  src
  build-depends:
    , attoparsec >=0.14.4 && <0.15
    , base >=4.17 && <4.18
    , data-default-class >=0.1.2 && <0.2
    , mtl >=2.3.1 && <2.4
    , text >=2.0.1 && <2.1
    , time >=1.12.2 && <1.13

  ghc-options:     -Wall

test-suite test
  import:         library
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  hs-source-dirs: test
  other-modules:
    SpecHelper
    System.Test.Cron
    System.Test.Cron.Describe
    System.Test.Cron.Internal.Schedule
    System.Test.Cron.Parser
    System.Test.Cron.Schedule

  build-depends:
    , attoparsec
    , base
    , cron
    , hedgehog
    , semigroups
    , tasty
    , tasty-hedgehog
    , tasty-hunit
    , text
    , time
    , transformers-compat

  ghc-options:    -Wall -O2 -threaded -rtsopts -with-rtsopts=-N

source-repository head
  type:     git
  location: https://github.com/michaelxavier/cron
